FIX: footer hidden on chat popup when open on mobile

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -1270,3 +1270,13 @@
     pointer-events: auto;
   }
 }
+
+.chat-popup {
+
+  .site-footer {
+
+    @include media-breakpoint-down($desktop-breakpoint) {
+      display: none;
+    }
+  }
+}
